crates/eosio_macros/tests/ui/name-bad-char.rs
extern crate eosio_macros;

use eosio_macros::n;

fn main() {
    let _ = n!("test1230");
}
